--- a/app/src/main/res/layout/songs_list.xml
+++ b/app/src/main/res/layout/songs_list.xml
@@ -6,9 +6,9 @@
     android:background="@color/colorlightPink">
 
     <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:id="@+id/singerImage"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
@@ -23,7 +23,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
-        android:layout_toEndOf="@+id/profile_image"
+        android:layout_toEndOf="@+id/singerImage"
         android:text="SongName"
         android:textColor="#555555"
         android:textSize="16sp" />
@@ -36,7 +36,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="5dp"
-        android:layout_toEndOf="@+id/profile_image"
+        android:layout_toEndOf="@+id/singerImage"
         android:text="     SingerName"
         android:textColor="#999999"
         android:textSize="14sp" />
