--- a/app/src/main/res/layout/activity_search_song.xml
+++ b/app/src/main/res/layout/activity_search_song.xml
@@ -4,69 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EEE8F8"
+    android:background="#E3D7F5"
     android:orientation="vertical"
     tools:context=".SearchSongActivity">
 
 
     <TextView
         android:id="@+id/heading_label"
-        android:text="Songs Search"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
         android:paddingLeft="30dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="10dp"
-        android:textColor="#555555"
-        android:textSize="24sp"/>
-
-    <EditText
-        android:id="@+id/search_field"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/heading_label"
-        android:layout_below="@+id/heading_label"
-        android:gravity="left"
-        android:layout_toStartOf="@+id/search_btn"
-        android:background="@drawable/search_layout"
-        android:ems="10"
-        android:hint="Search here"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:text="Songs Search"
+        android:textStyle="bold"
         android:paddingTop="10dp"
-        android:textColor="#999999"
-        android:textSize="16sp" />
+        android:textSize="30sp"/>
+
+    <RelativeLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/heading_label">
+
+        <EditText
+            android:id="@+id/search_field"
+            android:layout_toEndOf="@id/search_btn"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/search_layout"
+            android:drawablePadding="10dp"
+            android:hint="Write here the name of the song"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="15dp"
+            android:singleLine="true" />
+
+        <ImageButton
+            android:id="@+id/search_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#E3D7F5"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="20dp"
+            app:srcCompat="@drawable/search_button" />
+
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/search_field"
+        android:layout_below="@id/layout"
+        android:paddingLeft="30dp"
         android:text="Tap on song to get chords"
+        android:textColor="#4708F5"
+        android:textStyle="bold|italic"
         android:paddingTop="10dp"/>
 
-    <ImageButton
-        android:id="@+id/search_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="68dp"
-        android:layout_alignTop="@+id/search_field"
-        android:layout_alignBottom="@+id/search_field"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-12dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="-15dp"
-        android:background="@color/colorlightPink"
-        android:paddingLeft="10dp"
-        app:srcCompat="@drawable/search_button" />
 
 
     <ListView
         android:id="@+id/searchSongList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/search_field"
-        android:layout_marginTop="30dp"></ListView>
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="20dp"></ListView>
 
 </RelativeLayout>
