--- a/app/src/main/res/layout/songs_list.xml
+++ b/app/src/main/res/layout/songs_list.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorlightPink">
+    android:background="@color/colorPink">
 
     <ImageView
         android:id="@+id/singerImage"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:adjustViewBounds="true"
+        android:background="@drawable/ic_anonymous" />
 
     <TextView
         android:id="@+id/textViewSongName"
@@ -26,7 +28,8 @@
         android:layout_toEndOf="@+id/singerImage"
         android:text="SongName"
         android:textColor="#555555"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/textViewSingerName"
@@ -37,7 +40,8 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/singerImage"
-        android:text="     SingerName"
+        android:text="SingerName"
         android:textColor="#999999"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:textStyle="italic"/>
 </RelativeLayout>
