--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorSearch">#6361F4</color>
-    <color name="colorlightPink">#EEE8F8</color>
+    <color name="colorPink">#E3D7F5</color>
 </resources>
