--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -44,18 +44,17 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
+                    android:layout_alignParentRight="true"
                     android:background="@drawable/ic_camera" />
 
                 <Button
                     android:id="@+id/btn_record"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="116dp"
-                    android:layout_toRightOf="@id/btn_camera"
-                    android:adjustViewBounds="true"
                     android:background="@drawable/ic_record" />
 
             </RelativeLayout>
