--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,12 @@
                     android:hint="Password"
                     android:inputType="textPassword"/>
 
+                <androidx.appcompat.widget.AppCompatCheckBox
+                    android:id="@+id/rememberMe"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remember me"
+                    android:layout_gravity="left" />
 
                 <TextView
                     android:id="@+id/text_view_forget_password"
@@ -87,7 +93,6 @@
                     android:layout_gravity="right"
                     android:paddingTop="5dp"
                     android:text="Forgot Password?"/>
-
 
                 <Button
                     android:id="@+id/button_sign_in"
