--- a/app/src/main/res/layout/activity_user_audio.xml
+++ b/app/src/main/res/layout/activity_user_audio.xml
@@ -8,20 +8,37 @@
     android:layout_height="match_parent"
     tools:context=".UserAudio">
 
-    <TextView
-        android:id="@+id/audio_title"
-        android:text="Recording"
-        android:textColor="#CB09EC"
-        android:textSize="18dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
+    <RelativeLayout
+        android:id="@+id/v_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/audio_title"
+            android:layout_toEndOf="@id/btn_vrefresh"
+            android:layout_width="355dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Recording"
+            android:textColor="#CB09EC"
+            android:textSize="25dp"
+            android:singleLine="true" />
+
+        <Button
+            android:id="@+id/btn_vrefresh"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_refresh"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="5dp" />
+    </RelativeLayout>
+
     <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/black"
-        android:layout_below="@id/audio_title"/>
+        android:layout_below="@id/v_title"/>
 
     <TextView
         android:id="@+id/no_recordings"
@@ -31,13 +48,13 @@
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/audio_title"/>
+        android:layout_below="@id/line"/>
 
     <ListView
         android:id="@+id/audio_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/audio_title">
+        android:layout_below="@+id/line">
     </ListView>
 
 </RelativeLayout>
