--- a/app/src/main/res/layout/activity_user_video.xml
+++ b/app/src/main/res/layout/activity_user_video.xml
@@ -2,26 +2,44 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#E3D7F5"
     android:orientation="vertical"
+    android:background="#E3D7F5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserVideo">
 
-    <TextView
-        android:id="@+id/video_title"
-        android:text="Video"
-        android:textColor="#CB09EC"
-        android:textSize="18dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
+    <RelativeLayout
+        android:id="@+id/a_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/video_title"
+            android:layout_toEndOf="@id/btn_refresh"
+            android:layout_width="355dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Video"
+            android:textColor="#CB09EC"
+            android:textSize="25dp"
+            android:singleLine="true" />
+
+        <Button
+            android:id="@+id/btn_refresh"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_refresh"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="5dp" />
+    </RelativeLayout>
+
+
     <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/black"
-        android:layout_below="@id/video_title"/>
+        android:layout_below="@id/a_title"/>
 
     <TextView
         android:id="@+id/no_videos"
@@ -31,13 +49,13 @@
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/video_title"/>
+        android:layout_below="@id/line"/>
 
     <ListView
         android:id="@+id/video_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/video_title">
+        android:layout_below="@+id/line">
     </ListView>
 
 </RelativeLayout>
