--- a/app/src/main/res/layout/video_list.xml
+++ b/app/src/main/res/layout/video_list.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <VideoView
+    <ImageView
         android:id="@+id/video_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/ic_video"/>
 
     <TextView
         android:id="@+id/textViewVideoName"
