--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,6 +105,13 @@
                     android:textColor="#fff"
                     android:textSize="18sp"/>
 
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/sign_in_button"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginLeft="18dp"/>
+
                 <TextView
                     android:id="@+id/text_view_register"
                     android:layout_gravity="center_horizontal"
