--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,9 +9,9 @@
     tools:context=".MenuActivity">
 
     <TextView
-        android:id="@+id/textViewName"
-        android:text="Welcome !!"
-        android:textColor="#090808"
+        android:id="@+id/welcome"
+        android:text="Welcome back!!"
+        android:textColor="#D60CFA"
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_width="fill_parent"
@@ -19,39 +19,61 @@
         android:gravity="center"
         android:paddingTop="20dp"/>
 
-    <Button
-        android:id="@+id/btn_search"
-        android:text="search song"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/r1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        />
+        android:layout_below="@+id/welcome"
+        android:paddingTop="100dp">
 
-    <Button
-        android:id="@+id/btn_upload"
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_search"
+            android:text="search song"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/round_button" />
+
+        <Button
+            android:id="@+id/btn_upload"
+            android:text="upload song"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/round_button"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/r2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_search"
-        android:layout_marginTop="12dp"
-        android:layout_centerInParent="true"
-        android:text="upload song" />
-
-    <Button
-        android:id="@+id/btn_audio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_search"
-        android:layout_marginTop="12dp"
-        android:layout_centerInParent="true"
-        android:text=" my records " />
-
-    <Button
-        android:id="@+id/btn_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_audio"
-        android:layout_centerInParent="true"
-        android:text="   my videos   " />
-
-
+        android:layout_below="@+id/r1"
+        android:paddingTop="30dp">
+        <Button
+            android:id="@+id/btn_audio"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:text="my records"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/round_button"/>
+        <Button
+            android:id="@+id/btn_video"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:text=" my    videos"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/round_button"/>
+    </RelativeLayout>
 </RelativeLayout>
