--- a/app/src/main/res/layout/activity_upload_song.xml
+++ b/app/src/main/res/layout/activity_upload_song.xml
@@ -99,6 +99,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/songInput"
         android:layout_alignParentRight="true"
+        android:background="@drawable/ic_round_button1"
+        android:layout_marginTop="10dp"
+        android:paddingTop="12dp"
         android:gravity="right"
         android:text="add picture" />
 
