--- a/app/src/main/res/layout/songs_list.xml
+++ b/app/src/main/res/layout/songs_list.xml
@@ -15,7 +15,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
-        android:background="@drawable/ic_anonymous" />
+        android:background="@drawable/ic_round_button1"
+        android:src="@drawable/ic_anonymous"
+        />
 
     <TextView
         android:id="@+id/textViewSongName"
