--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -33,6 +33,7 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             <RelativeLayout
+                android:id="@+id/rec_cam"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -80,7 +81,9 @@
                     android:gravity="right"
                     android:textColor="#030303"/>
 
+
             </RelativeLayout>
+
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -94,7 +97,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:layout_anchorGravity="bottom|end" />
 
 </LinearLayout>
