--- a/app/src/main/res/anim/blink2.xml
+++ b/app/src/main/res/anim/blink2.xml
@@ -4,5 +4,6 @@
         android:toAlpha="1.0"
         android:interpolator="@android:anim/accelerate_interpolator"
         android:duration="800"
-        android:repeatMode="reverse" />
+        android:repeatMode="reverse"
+        android:repeatCount="infinite"/>
 </set>
