--- a/app/src/main/res/anim/bounce.xml
+++ b/app/src/main/res/anim/bounce.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/bounce_interpolator">
     <translate
-        android:duration="1100"
-        android:fromXDelta="100%p"
-        android:toXDelta="0%p" />
+        android:duration="700"
+        android:fromYDelta="-20%p"
+        android:toYDelta="0%p" />
 </set>
