--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
                     android:text="Forgot Password?"/>
 
                 <Button
-                    android:id="@+id/button_sign_in"
+                    android:id="@+id/logIn"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="22dp"
@@ -106,7 +106,7 @@
                     android:textSize="18sp"/>
 
                 <com.google.android.gms.common.SignInButton
-                    android:id="@+id/sign_in_button"
+                    android:id="@+id/signInGoogle"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="18dp"
