--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,9 +58,19 @@
                     android:drawableLeft="@drawable/ic_email"
                     android:drawablePadding="10dp"
                     android:singleLine="true"
-                    android:layout_marginBottom="10dp"
                     android:hint="john@gmail.com"
                     android:inputType="textEmailAddress"/>
+
+                <TextView
+                    android:id="@+id/error"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="Invalid email address"
+                    android:textColor="#EC0E0E"
+                    android:textStyle="bold"
+                    android:visibility="invisible"
+                    android:layout_marginBottom="10dp" />
 
                 <TextView
                     android:labelFor="@id/edit_text_password"
